# cbm-ieee-disk-diag-rom

./: .gitignore  CHANGELOG.md  FAQ.md  Makefile  README.md  check_sec_binary.sh  constants_6502.inc  diag_x040.s  diag_x040_6504.s  diag_x040_d000.cfg  diag_x040_f000.cfg  flash_fill_1mbit.sh  macros.inc  shared.inc  zero_page_6502.inc
.github/workflows/: build.yml  release.yml
config/: primary_8x50_e000.cfg  primary_d000.cfg  primary_f000.cfg  primary_xx40_d000.cfg  primary_xx40_f000.cfg  secondary.cfg
docs/original_roms/: 8050_8250.md  README.md  dos1_6502_e000_ffff.a65  dos1_6504_format_0500.a65  dos1_6504_primary_fc00_ffff.a65  dos27_primary_8250_c000_f000_rom.a65
docs/schematics/: README.md
docs/specs/: IEEE-test.md  LISTEN-commands.md  README.md  cbm-program.md
docs/technical/: 4040-memory-layout.md  README.md
include/: macros.inc  shared.inc  version.inc
include/primary/: constants.inc  zeropage.inc
src/: README.md
src/primary/: data.s  header.s  main.s  secondary.s  string.s
src/secondary/: control.s
src/support/: README.md
src/support/pc/: Cargo.toml
src/support/pc/src/: main.rs
src/support/pet/: support.bas
